samples/_failures_safe/1761291378_0a2cc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7002d73.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b7002d73.c:151:31: error: expected ‘]’ at end of input
  151 |                 token->value[1
      |                               ^
      |                               ]
./samples/SAFE/__tmp_b7002d73.c:151:17: error: expected declaration or statement at end of input
  151 |                 token->value[1
      |                 ^~~~~
./samples/SAFE/__tmp_b7002d73.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7002d73.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7002d73.c:151:17: error: expected declaration or statement at end of input
